--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <div class="mt-5 d-flex">
                     <img src="./assets/img/Vector (3).png" alt="">
                     <div class="ml-3">
-                        <span class="pyment-text">মেসার্স রোনাসা স্টীল</span> <br>
-                        <span class="pyment">দোকান নং #২৩, নিউ সুপার মার্কে...</span>
+                        <span class="font-lg font-bold">মেসার্স রোনাসা স্টীল</span> <br>
+                        <span class="font-md">দোকান নং #২৩, নিউ সুপার মার্কে...</span>
                     </div>
                 </div>
                 <div class="my-4">
@@ -34,145 +34,134 @@
                     <span class="ml-2">বিক্রি করুন</span>
                 </div>
             </div>
+
             <div class="col-10 col-md-9 p-0">
                 <header>
                     <div class="d-flex justify-content-between header-top">
                         <div class=" col-6 py-2">
                             <div class="col-9 d-flex p-0">
                                 <img class="menu-icon mt-1 mr-3" src="./assets/img/menu_open.png" alt="">
-                                <input class="form-control py-3 border input" type="search"
-                                    placeholder="অনুসন্ধান করুন">
+                                <div class="w-100 position-relative">
+                                    <input class="form-control pl-5 py-3 border font-md" type="search"
+                                        placeholder="অনুসন্ধান করুন">
+                                    <img class="search-icon" src="./assets/img/search.png" alt="">
+                                </div>
                             </div>
-
                         </div>
                         <div class="col-6 d-flex justify-content-end">
                             <div class="d-flex bg px-2 pt-2">
                                 <img class="imge" src="./assets/img/Rectangle 2726.png" alt="">
                                 <div>
-                                    <h1 class="td-text1">এস এম আলীউজ্জামান</h1>
-                                    <p class="text-sm">এস এম আলীউজ্জামান</p>
+                                    <h1 class="font-md">এস এম আলীউজ্জামান</h1>
+                                    <p class="font-sm">এস এম আলীউজ্জামান</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <h1 class="td-text pl-3 py-2"><span class="fw">ব্যাবসার সার্বিক অবস্থা</span>/ লাভ ক্ষতির রিপোর্ট
+                    <h1 class="font-md pl-3 py-2"><span class="font-bold">ব্যাবসার সার্বিক অবস্থা</span>/ লাভ ক্ষতির
+                        রিপোর্ট
                     </h1>
                 </header>
 
-
-
                 <div class="container-fluid bg-gray py-3">
                     <div class="row">
+
                         <div class="col-8">
                             <div class="product-area px-3">
                                 <div class="input-group py-3">
-                                    <input class="form-control py-2  border-right-0 border" type="search" value="search"
-                                        id="example-search-input">
-                                    <span class="input-group-append">
-                                        <button class="btn btn-outline-secondary border-left-0 border" type="button">
-                                            <i class="fa fa-search"></i>
-                                        </button>
-                                    </span>
+                                    <div class="w-100 position-relative">
+                                        <input class="form-control py-3 pl-5 border font-md" type="search"
+                                            placeholder="অনুসন্ধান করুন">
+                                        <img class="search-icon" src="./assets/img/search.png" alt="">
+                                    </div>
                                 </div>
 
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th scope="col">
-                                                <input type="checkbox">
-                                            </th>
-                                            <th scope="col"># পণ্য (৩)</th>
-                                            <th scope="col">স্টক</th>
-                                            <th scope="col">ক্রয় মূল্য</th>
-                                            <th scope="col">বিক্রয় মূল্য</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <th scope="row">
-                                                <input type="checkbox" id="id1"></th>
-                                            <td>
-                                                <div class="d-flex">
-                                                    <img src="./assets/img/rise.png" alt="">
-                                                    <div class="pl-2">
-                                                        <span class=" td-text1">রূপচাঁদা সয়াবিন তেল<span><br />
-                                                                <span class=" td-text">মুদি পণ্য</span>
-                                                    </div>
+                                <div class="grid-container">
+                                    <div class="grid-items">
+                                        <span class="checkbox"><input type="checkbox" /></span>
+                                        <span class="product"># পণ্য (৩)</span>
+                                        <span class="stok">স্টক</span>
+                                        <span class="by">ক্রয় মূল্য</span>
+                                        <span class="sell">বিক্রয় মূল্য</span>
+                                    </div>
+                                    <div class="grid-items">
+                                        <span class="checkbox"><input type="checkbox" id="id1"></span>
+                                        <span class="product">
+                                            <div class="d-flex">
+                                                <img src="./assets/img/rise.png" alt="">
+                                                <div class="pl-2">
+                                                    <span class=" td-text1">রূপচাঁদা সয়াবিন তেল<span><br />
+                                                            <span class=" td-text">মুদি পণ্য</span>
                                                 </div>
+                                            </div>
+                                        </span>
+                                        <span class="stok">৯০০</span>
+                                        <span class="by">৳ ৮৯০</span>
+                                        <span class="sell id1-price">৳ ৯০০</span>
+                                    </div>
 
-                                            </td>
-                                            <td>৯০০</td>
-                                            <td>৳ ৮৯০</td>
-                                            <td class="id1-price">৳ ৯০০</td>
-
-                                        </tr>
-
-                                        <tr>
-                                            <th scope="row"><input type="checkbox"></th>
-                                            <td>
-                                                <div class="d-flex">
-                                                    <img src="./assets/img/milk.png" alt="">
-                                                    <div class="pl-2">
-                                                        <span class=" td-text1">রূপচাঁদা সয়াবিন তেল<span><br />
-                                                                <span class=" td-text">মুদি পণ্য</span>
-                                                    </div>
+                                    <div class="grid-items">
+                                        <span class="checkbox"><input type="checkbox" /></span>
+                                        <span class="unic-product">
+                                            <div class="d-flex">
+                                                <img src="./assets/img/milk.png" alt="">
+                                                <div class="pl-2">
+                                                    <span class=" td-text1">রূপচাঁদা সয়াবিন তেল (৩ ধরন)<span><br />
+                                                            <span class=" td-text">মুদি পণ্য</span>
                                                 </div>
+                                            </div>
+                                        </span>
+                                        <!-- <span class="stok">৯০০</span>
+                                        <span class="by">৳ ৮৯০</span>
+                                        <span class="sell">৳ ৯০০</span> -->
+                                    </div>
 
-                                            </td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-
-
-                                        </tr>
-
-                                        <tr>
-                                            <th scope="row"><input type="checkbox"></th>
-                                            <td>
-                                                <div class="d-flex">
-                                                    <img src="./assets/img/chili.png" alt="">
-                                                    <div class="pl-2">
-                                                        <span class=" td-text1">রূপচাঁদা সয়াবিন তেল<span><br />
-                                                                <span class=" td-text">মুদি পণ্য</span>
-                                                    </div>
+                                    <div class="grid-items">
+                                        <span class="checkbox"><input type="checkbox" /></span>
+                                        <span class="product">
+                                            <div class="d-flex">
+                                                <img src="./assets/img/chili.png" alt="">
+                                                <div class="pl-2">
+                                                    <span class=" td-text1">রূপচাঁদা সয়াবিন তেল<span><br />
+                                                            <span class=" td-text">মুদি পণ্য</span>
                                                 </div>
+                                            </div>
+                                        </span>
+                                        <span class="stok">৯০০</span>
+                                        <span class="by">৳ ৮৯০</span>
+                                        <span class="sell">৳ ৯০০</span>
+                                    </div>
 
-                                            </td>
-                                            <td>৯০০</td>
-                                            <td>৳ ৮৯০</td>
-                                            <td>৳ ৯০০</td>
-
-                                        </tr>
-                                    </tbody>
-                                </table>
+                                </div>  
                             </div>
                         </div>
+
                         <div class="col-4 checkout-area">
-                            <h1 class="check-text">মূল্য পরিশোধ মাধ্যম</h1>
+                            <h1 class="font-lg font-bold">মূল্য পরিশোধ মাধ্যম</h1>
                             <div class="px-3">
                                 <div class="row">
                                     <div class="relative py-2 px-3 rounded border border-1 col-6">
                                         <img src="./assets/img/money 2.png" alt="">
-                                        <span class="pyment pl-2">নগদ টাকা</span>
+                                        <span class="font-md pl-2">নগদ টাকা</span>
                                         <input class="absolute" type="radio">
                                     </div>
 
                                     <div class="relative py-2 px-2 rounded border border-1 col-6">
                                         <div>
                                             <img src="./assets/img/cashless-payment 2.png" alt="">
-                                            <span class="pyment">ডিজিটাল পেমেন্ট</span>
+                                            <span class="font-md">ডিজিটাল পেমেন্ট</span>
                                         </div>
                                         <input class="absolute" type="radio">
                                     </div>
 
                                     <div class="relative py-2 px-3 rounded border border-1 col-6 mt-3">
                                         <img src="./assets/img/Group 4622.png" alt="">
-                                        <span class="pyment pl-2">বাকী</span>
+                                        <span class="font-md pl-2">বাকী</span>
                                         <input class="absolute" type="radio">
                                     </div>
 
                                     <div class="py-2 px-3 rounded border border-1 text-center col-6 mt-3">
-                                        <span class="pyment">আরও দেখুন</span>
+                                        <span class="font-md">আরও দেখুন</span>
                                         <div class="d-flex justify-content-between">
                                             <img src="./assets/img/image 317.png" alt="">
                                             <img src="./assets/img/image-removebg-preview 1.png" alt="">
@@ -183,7 +172,9 @@
                                 </div>
                                 <div class="row mt-3">
                                     <input class="cashInput w-100 form-control border" type="text">
-                                    <p class="mt-2 pyment-text ">বাকী আছেঃ ৳ <span class="total-payment">২৩,০০০</span></p>
+                                    <p class="mt-2 font-lg font-bold ">বাকী আছেঃ ৳ <span
+                                            class="total-payment">২৩,০০০</span>
+                                    </p>
                                 </div>
                             </div>
                             <button class="btn btn-primary w-100">পেমেন্ট কনফার্ম করুন</button>
@@ -197,7 +188,7 @@
 
 
 
-<script src="./app.js"></script>
+    <script src="./app.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js
     "></script>
